--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div class="header-area">
             <div class="main-header-area">
                 <div class="container">
                     <div class="header_bottom_border">
@@ -126,8 +126,6 @@
                             <div class="mt-4">
                                 <div>
                                     <div id="counterArea" style="margin-left: auto; margin-right: auto;">
-
-
                                     </div>
                                 </div>
                             </div>
@@ -259,7 +257,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -269,7 +267,6 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Robert Kiyosaki</h4>
-                                    <!-- <span>Actor</span> -->
                                     <div>
                                         <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
                                             class="fa fa-twitter"></a>
@@ -282,7 +279,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
@@ -307,7 +304,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -317,7 +314,6 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Susmita Adhikari</h4>
-                                    <!-- <span>Cricketer</span> -->
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
@@ -327,7 +323,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
@@ -352,7 +348,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -362,7 +358,6 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Radha Gomaty</h4>
-                                    <!-- <span>Cricketer</span> -->
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
@@ -373,7 +368,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
@@ -416,7 +411,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -426,7 +421,6 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Illusionist Raymi</h4>
-                                    <!-- <span>Cricketer</span> -->
                                     <div>
                                         <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
@@ -437,7 +431,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
