--- a/performer.html
+++ b/performer.html
@@ -89,7 +89,7 @@
         <div class="container mt-5">
 
             <!-- single performer -->
-            <div>
+            <div id="p1">
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="section_title mb-50">
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <!-- single performer end -->
-            <div>
+            <div id="p2">
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="section_title mb-50">
@@ -198,7 +198,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div  id="p3">
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="section_title mb-50">
@@ -251,7 +251,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div  id="p4">
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="section_title mb-50">
@@ -303,7 +303,7 @@
             </div>
         </div>
         <!-- performar_area_end  -->
-        <div>
+        <div  id="p5">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -356,7 +356,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div  id="p6">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -409,7 +409,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div  id="p7">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -460,7 +460,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div  id="p8"> 
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -517,7 +517,7 @@
         <div>
             <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Performers</h1>
         </div>
-        <div>
+        <div  id="p9">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -568,7 +568,7 @@
         </div>
 
 
-        <div>
+        <div  id="p10">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -644,18 +644,20 @@
                                     <div class="col-lg-6">
                                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Address
                                         </h3>
-                                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The event
-                                            regularly
-                                            attracts a diverse range of attendees from around Kerala.</p>
+                                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                            TKM College of Engineering,<br />
+                                            Karicode,Kollam-691005,<br />
+                                            Kerala,India
+                                        </p>
 
                                     </div>
 
                                     <div class="col-lg-6">
                                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Connect
                                             with us</h3>
-                                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The event
-                                            regularly
-                                            attracts a diverse range of attendees from around Kerala.</p>
+                                            <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                                contact@tedxtkmce.in
+                                            </p>
 
                                     </div>
                                 </div>
@@ -717,6 +719,20 @@
 
 
     <script src="js/main.js"></script>
+
+    <script>
+       // $('#p1').hide();
+        $('#p2').hide();
+       // $('#p3').hide();
+        $('#p4').hide();
+       // $('#p5').hide();
+        $('#p6').hide();
+       // $('#p7').hide();
+        //$('#p8').hide();
+        $('#p9').hide();
+       // $('#p10').hide();
+
+    </script>
 </body>
 
 </html>
