--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                                     class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">x</span>
                                 <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</span>
                             </h3> -->
-                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-family: tedFont; font-size: 90px;"> Theme: Prosper.Sapience<span id="x"></span>
+                            <h3 id="themeHeading" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-family: tedFont;"> Theme: Prosper.Sapience<span id="x"></span>
                             </h3>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s"
                                 style="font-family: tedFont;">November 22nd, 2020</span>
