--- a/index.html
+++ b/index.html
@@ -148,24 +148,20 @@
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Theme:</h3>
                         <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                            style="text-align: justify;">The evolution
-                            of the
-                            hominid species from the primitive habilus to modern-day sapiens took over
-                            two million years. Being the most evolved and intelligent species on planet Earth ,are
-                            humans
-                            worthy of the title Sapiens or the wise ones? Have we really learned it all ? Does the
-                            turbulence
-                            and unrest that we showcase show otherwise?
-                            As millennials we do not fall short in intelligence but lack the graceful lining of wisdom.
-                            Wisdom
-                            is the understanding of the self, being in peace with it and smothering the turbulent
-                            undercurrent
-                            that we all possess deep within ourselves. We are in search of stories and experiences that
-                            can
-                            enrich every listener out there. Shaping their perspective and incorporating ideas of
-                            progress so
-                            that through this shared knowledge and wisdom they can play their part in leading humans to
-                            prosperity.</p>
+                            style="text-align: justify;">“Prosperity is a mindset. It is our expectation and quest for
+                            it.”
+                        </p>
+                        <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                            style="text-align: justify;">
+                            The evolution of the hominid species to modern-day sapiens took over two million years.
+                            Being the most evolved and intelligent species on planet Earth ,are humans worthy of the
+                            title the wise ones? Does the turbulence and unrest that we showcase show otherwise?
+                            Wisdom is the understanding of the self, being in peace with it and smothering the turbulent
+                            undercurrent that we all possess deep within ourselves. We are in search of stories and
+                            experiences that can enrich every listener out there and help them shape their perspective
+                            and incorporate
+                            ideas of progress and prosperity in their lives.
+                        </p>
                     </div>
                 </div>
             </div>
