--- a/register.html
+++ b/register.html
@@ -90,16 +90,21 @@
 
             <div id="faqArea" class="row">
                 <div class="section_title mb-80">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">FAQ</h3>
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 50px;">FAQ
+                        & TERMS AND CONDITIONS</h3>
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
+                        SCROLL DOWN AFTER READING AND CLICK "I AGREE" TO ENABLE THE
+                        PURCHASE OPTION</h3>
                     <ul>
                         <li style="margin: 2%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● When and where is the event happening ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
                                 The event is happening on the 22nd of November, 2020 from 9:00 AM IST to 3:00 PM
-                                IST and will be done virtually via Zoom/Webex platform.
+                                IST and will be done virtually via Zoom platform.
                             </p>
                         </li>
                         <li style="margin: 2%;">
@@ -107,7 +112,8 @@
                                 style="font-weight: bold">
                                 ● How will the sessions be held ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
                                 The event will be split up into two 2-hour sessions with a 30 minutes break in between.
                             </p>
                         </li>
@@ -116,8 +122,10 @@
                                 style="font-weight: bold">
                                 ● How many speakers will be part of TEDxTKMCE ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
-                                TEDxTKMCE will consist of 8 Speakers, 3 performers and 2 Interactive Guest Panelists
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
+                                TEDxTKMCE will consist of 8 Speakers, 3 performers and an Interactive Guest
+                                Panel[separate from that of the Speakers].
                             </p>
                         </li>
                         <li style="margin: 2%;">
@@ -125,10 +133,12 @@
                                 style="font-weight: bold">
                                 ● What is the mode of execution for TEDxTKMCE 2020 ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
                                 The talks from the speakers will all be pre recorded which will be followed by a
                                 15-20minute interactive session with the said speaker, the performances and
                                 interactive session panels will however be fully live.
+
                             </p>
                         </li>
                         <li style="margin: 2%;">
@@ -136,22 +146,26 @@
                                 style="font-weight: bold">
                                 ● Will all the Speakers have an interactive session with the attendees ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
-                                As of now,We have a confirmed list of Ravichandran.C,Dr.Madhusoodhanan, Maneesh
-                                Narayanan,Radha Gomaty and Sun Knudsen for an interactive session. The rest of the
-                                speakers are subject to their availability for an interactive session.
-
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
+                                Everyone part of the currently released line-up will participate in an interactive
+                                session.
+                                The availability of the rest of the speakers will be given as they are revealed in the
+                                coming days.
                             </p>
                         </li>
                         <li style="margin: 2%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
-                                ● What are the contents of the goodies bag ? When will we receive it ?
+                                ● What is the price of the ticket ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
-                                The goodies bag will contain a drawstring bag, notebook, keychain , pen and a thank
-                                you card. All of which are fully customized for TEDxTKMCE. It will be shipped to the
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
+                                The price of the ticket is 300₹. Attendees that purchase the ticket will also be give a
+                                goodies bag which will contain a drawstring bag, notebook, keychain , pen and a thank
+                                you card. All of which are fully customized for TEDxTKMCE and will be shipped to the
                                 attendee’s residence within 10-15 working days from the day of the event.
+
 
                             </p>
                         </li>
@@ -160,12 +174,184 @@
                                 style="font-weight: bold">
                                 ● When will we receive the schedule and other details of the event ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                                style="font-size: large;">
                                 The detailed schedule and all other instructions pertaining to TEDxTKMCE 2020 will be
                                 sent to the Attendee once they have purchased a ticket of admission to the event.
                             </p>
                         </li>
                     </ul>
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 50px;">
+                        TERMS AND CONDITIONS</h3>
+                    <ol>
+                        <li>
+                            <p>
+                                1. Each Ticket you purchase from TEDxTKMCE 2020 is intended to give you a revocable
+                                license
+                                to the attendance of the particular Event to which the Ticket pertains.
+                            </p>
+
+                        </li>
+                        <li>
+                            <p>
+                                2. Tickets once purchased are not cancellable or transferable.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                3. Tickets are not transferable and cannot be resold or offered for resale (including
+                                online auction
+                                sites) or used for commercial purposes without the express written permission of the
+                                organisers of TEDxTKMCE in advance.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                4. If TEDxTKMCE 2020 is cancelled in its entirety due to any unforeseen circumstances,
+                                TEDxTKMCE organisers has the sole and absolute right to:<br />
+                                i) reschedule the event, or<br />
+                                ii) issue a partial/full refund, or<br />
+                                iii) not issue any refunds.<br />
+                                These factors will be inclusive of, but not limited to, natural disasters, federal/state
+                                announcements, strikes, delays in production, and the like. Please note that the
+                                decision of
+                                TEDxTKMCE organisers in such cases will be deemed final and binding.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                5. We reserve the right to restrict the sale of Tickets to a maximum number per person,
+                                per credit
+                                card and/or per household and to cancel any Tickets purchased in excess of this number.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                6. If an error is made in the price of Tickets ordered by you, you will be notified by
+                                us as soon as
+                                possible and we will give you the option to either <br />
+                                (a) reconfirm your Ticket order at
+                                the correct price; or <br />
+                                (b) cancel your Ticket order and receive a full refund from us.
+
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                7. TEDxTKMCE 2020 in its entirety will be done through the online webinar platform Zoom.
+
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                8. TEDxTKMCE 2020 can be accessed via the Zoom App on the phone or via Laptop
+                                application
+                                or through the web browser on the laptop. We would suggest the Laptop app for the most
+                                optimal experience,provided you have the necessary network strength.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                9. The links to the event will be conveyed to the attendees at least 2 days prior to the
+                                event.
+
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                10.Each session of the event will be split into two two hour sessions with a 3 minute
+                                break in
+                                between.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                11.Since TEDxTKMCE 2020 is done online, in order to ensure that the flow and quality of
+                                the talks are jeopardised in no way shape or form, all the talks will be pre-recorded
+                                with the speakers giving an interactive session after their talk.<br />
+                                a. The Speaker Interactive Session will last for 15-20 minutes.<br />
+                                b. The Guest Interactive Session Panel will last for 20-40 minutes.<br />
+                                c. The performances and interactive sessions [Both of the Speaker and that of the Guest
+                                Panelists] will however be done live.<br />
+                                d. The interactive sessions will be in the form of a host-moderated QnA.<br />
+                                e. Interactive Sessions with the Speaker [And of that of the Guest Panel] is subject to
+                                their<br />
+                                availability and the full confirmed list will be given to the attendee closer to the
+                                event.<br />
+                                TEDxTKMCE under no circumstances, will be held responsible in the scenario that a
+                                Speaker and/or A Guest Panelist backs out of his/her interactive session due to
+                                unforeseeable circumstances.<br />
+                                f. Being a part of an Interactive session does not guarantee you a chance to personally
+                                interact with the said Speaker. Interaction is subject to the questions chosen by the
+                                Moderator.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                12.Since the event will be done completely virtually in the entirety of its 5hr
+                                duration. We expect
+                                the attendee to create the necessary conditions on their own in order to ensure the best
+                                network strength and data availability required for the event.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                13.Attendees are expected to dress well and sit in a neat, sound and distraction free
+                                environment
+                                as we will be asking the attendees to have their cameras on for most of the event,
+                                especially
+                                during the interactive sessions.
+
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                14.Attendees are expected to main proper decorum throughout the participation of the
+                                event.
+                                Failure to do so will result in the Attendee being warned and if need be, removed from
+                                the
+                                webinar at the behest of the host.
+
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                15.Every Attendee will be given a goodies bag for their participation in TEDxTKMCE 2020.
+                                The
+                                goodies bag will consist of 1x Drawstring Bag, 1x Medium Sized Notebook, 1x Pen, 1x
+                                Keychain, a certificate and a Thank You card, all of which are fully customised for
+                                TEDxTKMCE.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                16.The goodies bag will be delivered to the address given by the attendee within 10-15
+                                working
+                                days from the day of the event. Any changes regarding the delivery address should be
+                                notified
+                                prior via our email- contact@tedxtkmce.in
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                17.All further queries and doubts regarding TEDxTKMCE should be brought to the attention
+                                of the
+                                organising team via their email.[see above]
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                18.Please note that TEDxTKMCE organisers reserve the full right to make changes,
+                                revisions,
+                                and amendments, or add/remove sections from this set of terms and conditions – without
+                                any
+                                prior notifications to you. Such changes will be duly reflected on the website of the
+                                organiser (
+                                www.tedxtkmce.in ). These changes will relate back to the date of purchase of TEDxTKMCE
+                                tickets.
+                            </p>
+                        </li>
+                    </ol>
                     <input type="checkbox" id="agreement" name="agreement" value="agreed">
                     <label for="agreement">I have read the FAQ terms and conditions and agree to it</label><br>
                 </div>
@@ -173,9 +359,10 @@
 
             <div id="regFormArea" class="row">
                 <div class="col-12">
-                    <h2 id="reg" style="color: #FF4533; font-family: tedFont">Register</h2>
+                    <iframe width="560" height="315"
+                        src="https://www.yepdesk.com/embed/buy-tickets/5f9f870dc9e77c000113aa1c/private/hrpdh8d53n"></iframe>
                 </div>
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                     <form class="form-contact contact_form" action="" method="post" id="regForm"
                         novalidate="novalidate">
                         <div class="row">
@@ -224,7 +411,7 @@
                             <button type="submit" class="button button-contactForm boxed-btn">Register</button>
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <!-- <div class="col-lg-3 offset-lg-1">
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
@@ -303,12 +490,12 @@
 
     <script type="text/javascript">
         $('#regFormArea').hide();
-        $('#agreement').click(()=>{
+        $('#agreement').click(() => {
             console.log("checked");
-            if($("#agreement").prop('checked') == true){
+            if ($("#agreement").prop('checked') == true) {
                 $('#regFormArea').show();
             }
-            else{
+            else {
                 $('#regFormArea').hide();
             }
         });
